# spark-delta-apache

./: .env.example  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
delta/: index.html
docs/: delta.md  iceberg.md  index.md  spark.md
iceberg/: index.html
notebooks/: apache_iceberg.ipynb  delta_lake.ipynb
scratch/: update_notebooks.py
search/: search_index.json
spark/: index.html
src/spark_delta_apache/: __init__.py  config.py  log4j2.properties
